RESOLVED FIXED179751
Dispatching an event on a ServiceWorkerRegistration may fail or crash due to GC
https://bugs.webkit.org/show_bug.cgi?id=179751
Summary Dispatching an event on a ServiceWorkerRegistration may fail or crash due to GC
Chris Dumez
Reported 2017-11-15 17:14:05 PST
Dispatching an event on a ServiceWorkerRegistration may fail or crash due to GC. We need to make sure that a ServiceWorkerRegistration's wrapper stays alive as long as we may dispatch events on it.
Attachments
Patch (11.60 KB, patch)
2017-11-15 17:20 PST, Chris Dumez
no flags
Patch (10.97 KB, patch)
2017-11-16 10:26 PST, Chris Dumez
no flags
Patch (12.10 KB, patch)
2017-11-16 10:59 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-11-15 17:20:18 PST
Chris Dumez
Comment 2 2017-11-16 10:26:17 PST
Chris Dumez
Comment 3 2017-11-16 10:59:20 PST
Geoffrey Garen
Comment 4 2017-11-16 16:43:35 PST
Comment on attachment 327085 [details] Patch r=me
Chris Dumez
Comment 5 2017-11-16 16:45:11 PST
Comment on attachment 327085 [details] Patch Clearing flags on attachment: 327085 Committed r224944: <https://trac.webkit.org/changeset/224944>
Chris Dumez
Comment 6 2017-11-16 16:45:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-11-16 16:47:14 PST
Note You need to log in before you can comment on or make changes to this bug.